--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.2.2
+version: 0.3.2
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -38,6 +38,9 @@ dependencies:
   media_kit: ^1.1.10+1
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4
+  package_info_plus: ^6.0.0
+  shared_preferences: ^2.2.2
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
