--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.4.2
+version: 0.5.0
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -45,6 +45,9 @@ dependencies:
   url_launcher: ^6.2.5
   webview_flutter: ^4.7.0
   adaptive_theme: ^3.6.0
+  skeletonizer: ^1.1.1
+  cached_network_image: ^3.3.1
+  android_package_installer: ^0.0.2
 
 dev_dependencies:
   flutter_test:
