--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   skeletonizer: ^1.1.1
   cached_network_image: ^3.3.1
   android_package_installer: ^0.0.2
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
