--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.5.0
+version: 0.5.1
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.3.1
   android_package_installer: ^0.0.2
   change_app_package_name: ^1.1.0
+  shelf: ^1.4.1
 
 dev_dependencies:
   flutter_test:
